Fixed basket page product list style on mobile

--- a/src/scss/woocommerce/_basket.scss
+++ b/src/scss/woocommerce/_basket.scss
@@ -10,6 +10,27 @@
         }
     }
 
+    .woocommerce-cart-form {
+        .shop_table {
+            td {
+                @media screen and (max-width: $mobile-breakpoint) {
+                    padding: 5px;
+
+                    &.product-quantity {
+                        text-align: center;
+                    }
+
+                    .quantity {
+                        .qty {
+                            width: 50px;
+                            text-align: center;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     .cart-collaterals {
         display: flex;
         justify-content: center;
